--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="spaceX_prime">#263238</color>
+    <color name="spaceX_complementary">#78909c</color>
+    <color name="spaceX_secondary">#FF3D00</color>
+    <color name="spaceX_secondary_complementary">#FF8F00</color>
+    <color name="spaceX_btn_function">#FFEA00</color>
+    <color name="spaceX_btn_function_second">#FFC400</color>
 </resources>
