feature(CleanCodeArchi/spaceX_api_connect): Add layout xml file and init activity and fragment

--- a/app/src/main/res/layout/fragment_rocket_detail.xml
+++ b/app/src/main/res/layout/fragment_rocket_detail.xml
@@ -1,6 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_rocket_detail_shipName"
+            style="@style/spaceX_text_style.H1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Falcon" />
+
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/vp_rocket_detail_image"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_rocket_detail_shipName" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tb_rocket_detail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/vp_rocket_detail_image" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_rocket_detail_description_title"
+            style="@style/spaceX_text_style.H4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/summary"
+            android:textColor="@color/spaceX_complementary"
+            app:layout_constraintStart_toStartOf="@+id/tv_rocket_detail_shipName"
+            app:layout_constraintTop_toBottomOf="@+id/tb_rocket_detail" />
+
+        <com.google.android.material.textview.MaterialTextView
+            style="@style/spaceX_text_style.H5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="30dp"
+            android:textAlignment="textStart"
+            android:textStyle="normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tv_rocket_detail_shipName"
+            app:layout_constraintTop_toBottomOf="@+id/tv_rocket_detail_description_title"
+            tools:text="The Falcon 1 was an expendable launch system privately developed and manufactured by SpaceX during 2006-2009. On 28 September 2008, Falcon 1 became the first privately-developed liquid-fuel launch vehicle to go into orbit around the Earth." />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
