--- a/app/src/main/res/layout/fragment_rocket_detail.xml
+++ b/app/src/main/res/layout/fragment_rocket_detail.xml
@@ -37,7 +37,10 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vp_rocket_detail_image" />
+            app:layout_constraintTop_toBottomOf="@+id/vp_rocket_detail_image"
+            app:tabBackground="@drawable/tab_selector"
+            app:tabGravity="center"
+            app:tabIndicatorHeight="0dp" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_rocket_detail_description_title"
